--- a/index.html
+++ b/index.html
@@ -76,20 +76,20 @@
                 <h2 class="category-title">Завтраки</h2>
                 <div class="recipes-grid">
 
-                    <!-- Рецепт Американские оладья -->
+                    <!-- Рецепт Американские оладьи -->
                     <a href="recipes/breakfast_american_style_pancakes.html" class="recipe-card">
                         <div class="recipe-image">
-                            <img src="site-photos/breakfast_american_style_pancakes.png" alt="Американские оладья">
+                            <img src="site-photos/breakfast_american_style_pancakes.png" alt="Американские оладьи">
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
                         </div>
                         <div class="recipe-info">
-                            <h3>Американские оладья</h3>
+                            <h3>Американские оладьи</h3>
                             <p class="recipe-time"><i class="far fa-clock"></i> 45 мин </p>
                         </div>
                     </a>
-                    <!-- Рецепт Американские оладья конец -->
+                    <!-- Рецепт Американские оладьи конец -->
 
                     <!-- Рецепт Блины -->
                     <a href="recipes/breakfast_bliny.html" class="recipe-card"> 
@@ -121,20 +121,20 @@
                     </a>
                     <!-- Рецепт Овсянка конец -->
 
-                    <!-- Рецепт Яйца с сосикой и томатами -->
+                    <!-- Рецепт Яйца с сосиской и томатами -->
                     <a href="recipes/breakfast_eggs_sausage_tomato.html" class="recipe-card">
                         <div class="recipe-image">
-                            <img src="site-photos/breakfast_eggs_sausage_tomato.jpg" alt="Яйца с сосикой и томатами">
+                            <img src="site-photos/breakfast_eggs_sausage_tomato.jpg" alt="Яйца с сосиской и томатами">
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
                         </div>
                         <div class="recipe-info">
-                            <h3>Яйца с сосикой и томатами</h3>
+                            <h3>Яйца с сосиской и томатами</h3>
                             <p class="recipe-time"><i class="far fa-clock"></i> 10 мин</p>
                         </div>
                     </a>
-                    <!-- Рецепт Яйца с сосикой и томатами конец -->
+                    <!-- Рецепт Яйца с сосиской и томатами конец -->
 
                 </div>
             </div>
@@ -373,6 +373,23 @@
                     </div>
                 </a>
                 <!-- Рецепт Безе конец -->
+
+                <!-- Рецепт Капекейки с клубничной начинкой и крем-чизом -->
+                <a href="recipes/dessert_cupcake_creamchease_straberry_jam.html" class="recipe-card"> 
+                    <div class="recipe-image">
+                        <img src="site-photos/dessert_cupcake_creamchease_straberry_jam.jpg" alt="Капекейки с клубничной начинкой и крем-чизом"> 
+                        <div class="recipe-overlay">
+                            <i class="fas fa-external-link-alt"></i>
+                        </div>
+                    </div>
+                    <div class="recipe-info">
+                        <h3>Капекейки с клубничной начинкой и крем-чизом</h3> 
+                        <p class="recipe-time"><i class="far fa-clock"></i> 60 мин </p> 
+                    </div>
+                </a>
+                <!-- Рецепт Капекейки с клубничной начинкой и крем-чизом конец -->
+
+                
                 </div>
             </div>
 
