--- a/recipes/dessert_banana_bread.html
+++ b/recipes/dessert_banana_bread.html
@@ -166,7 +166,7 @@
                     <li>Застелите форму для выпечки пергаментом, вылейте тесто и слегка постучите формой по столу, чтобы выпустить пузырьки воздуха.</li> 
                     <li>Поставьте форму в разогретую духовку на 10 минут.</li> 
                     <li>Сделайте на поверхности кекса продольный разрез, отступив 2-3 см от края — это поможет кексу красиво раскрыться при выпекании.</li> 
-                    <li>Выпекайте ещё 35 минут, готовность проверьте деревянной зубочисткой.</li> 
+                    <li>Выпекайте еще 35 минут, готовность проверьте деревянной зубочисткой.</li> 
 
                 </ol>
             </div>
