--- a/recipes/main_dish_pasta_carbonara.html
+++ b/recipes/main_dish_pasta_carbonara.html
@@ -141,13 +141,13 @@
             <div class="ingredients">
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
-                    <li>200 мл сливок (15–20%)</li> 
+                    <li>200 мл сливок (15-20%)</li> 
                     <li>180 г спагетти</li> 
                     <li>150 г копченого бекона</li> 
                     <li>2 зубчика чеснока</li> 
                     <li>1 яичный желток</li> 
                     <li>Соль, перец</li> 
-                    <li>Пармиджано для посыпания</li> 
+                    <li>Пармиджано для подачи</li> 
 
 
 
@@ -162,7 +162,7 @@
                     <li>В небольшой миске смешайте сливки с яичным желтком, солью и перцем.</li> 
                     <li>Когда паста сварится, слейте почти всю воду, оставив немного воды, в которой варились спагетти.</li> 
                     <li>Верните спагетти в кастрюлю и убавьте огонь до очень слабого.</li> 
-                    <li>Влейте сливочно-яичную смесь в бекон, постоянно помешивая, около 30 секунд. Затем добавьте всё к спагетти и готовьте на слабом огне около 5 минут, аккуратно перемешивая.</li> 
+                    <li>Влейте сливочно-яичную смесь в бекон, постоянно помешивая, около 30 секунд. Затем добавьте все к спагетти и готовьте на слабом огне около 5 минут, аккуратно перемешивая.</li> 
                     <li>Подавайте, слегка посыпав сыром пармезан.</li> 
 
                 </ol>
