--- a/recipes/snacks_green_salad_with_balsamic.html
+++ b/recipes/snacks_green_salad_with_balsamic.html
@@ -141,8 +141,8 @@
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
                     <li>100 г зеленого салата</li> 
-<li>5 г оливкового масла</li> 
-<li>5 г бальзамического крема</li> 
+                    <li>5 г оливкового масла</li> 
+                    <li>5 г бальзамического крема</li> 
 
 
 
@@ -153,7 +153,7 @@
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
                     <li>Выложите зеленые листья в миску.</li> 
-<li>Добавьте оливковое масло и бальзамический крем, аккуратно перемешайте.</li> 
+                    <li>Добавьте оливковое масло и бальзамический крем, перемешайте.</li> 
 
                 </ol>
             </div>
