--- a/recipes/snacks_marinated_mashrooms.html
+++ b/recipes/snacks_marinated_mashrooms.html
@@ -162,18 +162,18 @@
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
                     <li>Тщательно вымойте шампиньоны. Если грибы крупные, разрежьте их на четвертинки.</li> 
-<li>Поместите шампиньоны в кастрюлю, залейте водой, доведите до кипения и варите в течение 10 минут.</li> 
-<li>Тем временем мелко нарежьте чеснок и лук, а болгарский перец нарежьте тонкими полосками.</li> 
-<li>Разложите сваренные шампиньоны на ровной поверхности, чтобы они быстрее остыли.</li> 
-<li>После полного остывания (примерно через 10-15 минут) добавьте к грибам нарезанные овощи, растительное масло, зернистую горчицу, лимонный сок, соевый соус, соль и сахар.</li> 
-<li>Переложите всё в банку, закройте крышкой и оставьте мариноваться в холодильнике.</li> 
+                    <li>Поместите шампиньоны в кастрюлю, залейте водой, доведите до кипения и варите в течение 10 минут.</li> 
+                    <li>Тем временем нарежьте лук полукольцами, чеснок и болгарский перец нарежьте тонкими полосками.</li> 
+                    <li>Разложите сваренные шампиньоны на ровной поверхности, чтобы они быстрее остыли.</li> 
+                    <li>После полного остывания добавьте к грибам нарезанные овощи, растительное масло, зернистую горчицу, лимонный сок, соевый соус, соль и сахар.</li> 
+                    <li>Переложите все в банку, закройте крышкой и оставьте мариноваться в холодильнике.</li> 
 
                 </ol>
             </div>
 
             
                 <div class="note">
-                <p><strong>Совет:</strong> Грибы можно есть через час, но через 12-24 часа они становятся их вкус становится более нежным. </p>
+                <p><strong>Совет:</strong> Грибы уже будут вкусные через час, но через 12-24 часа их вкус станет более нежным. </p>
                 </div>
 
         </div>
