--- a/recipes/snacks_salad_with_yogurt_dressing.html
+++ b/recipes/snacks_salad_with_yogurt_dressing.html
@@ -141,7 +141,7 @@
             <div class="ingredients">
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
-                    <li>150 г зелёных листьев (по выбору)</li> 
+                    <li>150 г зеленых листьев (по выбору)</li> 
 <li>100 г греческого йогурта</li> 
 <li>1 зубчик чеснока</li> 
 <li>Небольшой пучок укропа</li> 
@@ -156,13 +156,16 @@
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
                     <li>Промойте, обсушите и нарежьте салатные листья.</li> 
-<li>Измельчите укроп, натрите чеснок.</li> 
-<li>Соедините всё в миске с йогуртом и добавьте щепотку сахара и соль по вкусу, аккуратно перемешайте.</li> 
+<li>Измельчите укроп, натрите чеснок, добавьте йогурт, соль и сахар по вкусу, перемешайте.</li> 
+<li>Заправку для салата добавьте прямо перед подачей на стол.</li> 
 
                 </ol>
             </div>
 
             
+                <div class="note">
+                <p><strong>Совет:</strong> Если за столом присутствуют люди с разными предпочтениями по чесноку в соусе, подавайте соус отдельно. </p>
+                </div>
 
         </div>
     </main>
