--- a/recipes/snacks_semi_salted_cucumbers.html
+++ b/recipes/snacks_semi_salted_cucumbers.html
@@ -142,12 +142,9 @@
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
                     <li>2 свежих огурца</li> 
-<li>1 пучок укропа</li> 
-<li>1 головка чеснока</li> 
-<li>Соль, сахар, по вкусу</li> 
-
-
-
+                    <li>1 небольшой пучок укропа</li> 
+                    <li>1 зубчик чеснока</li> 
+                    <li>Соль, сахар, по вкусу</li> 
                 </ul>
             </div>
 
@@ -155,8 +152,8 @@
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
                     <li>Нарежьте огурец, натрите чеснок и измельчите укроп.</li> 
-<li>Соедините все ингредиенты в миске, добавьте соль и щепотку сахара, аккуратно перемешайте.</li> 
-<li>Перед подачей уберите в холодильник на 1 час.</li> 
+                    <li>Соедините все ингредиенты в миске, добавьте соль и щепотку сахара, перемешайте.</li> 
+                    <li>Уберите в холодильник на 1 час.</li> 
 
                 </ol>
             </div>
