--- a/recipes/snaks_salad_carrot_cabbabege.html
+++ b/recipes/snaks_salad_carrot_cabbabege.html
@@ -155,8 +155,8 @@
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
                     <li>Мелко нашинкуйте капусту и слегка помните ее руками.</li> 
-<li>Натрите морковь на терке.</li> 
-<li>Смешайте все в миске и хорошо перемешайте.</li> 
+                    <li>Натрите морковь на терке.</li> 
+                    <li>Объедините все в миске и хорошо перемешайте.</li> 
 
                 </ol>
             </div>
