--- a/recipes/main_dish_orzo.html
+++ b/recipes/main_dish_orzo.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
@@ -142,12 +141,12 @@
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
                     <li>500 г орзо</li> 
-<li>500 г концентрированного томатного сока</li> 
+<li>300 г бульона</li> 
 <li>200 г греческой колбасы</li> 
 <li>50 г феты</li> 
+<li>50 г томатной пасты</li> 
 <li>1 луковица</li> 
 <li>4 зубчика чеснока</li> 
-<li>1 бульонный кубик</li> 
 <li>Соль, перец, паприка, чили</li> 
 
 
@@ -160,14 +159,17 @@
                 <ol>
                     <li>Сварите орзо в подсоленной воде согласно инструкции на упаковке.</li> 
 <li>Тем временем обжарьте колбасу на сильном огне. Добавьте лук и выдавите чеснок.</li> 
-<li>Когда орзо сварится, слейте почти всю воду, оставив небольшое количество воды, в которой варились макароны.</li> 
-<li>Убавьте огонь до минимума, добавьте томатный сок, обжаренную колбасу с луком и чесноком, раскрошенную фету и приправы.</li> 
+<li>Когда орзо сварится, слейте почти всю воду, оставив небольшое количество воды, в которой варилась паста.</li> 
+<li>Убавьте огонь до минимума, добавьте бульон, томатную пасту, обжаренную колбасу с луком и чесноком, раскрошенную руками фету и приправы.</li> 
 <li>Хорошо перемешайте, доведите до слабого кипения, затем снимите с огня и дайте постоять 5–10 минут перед подачей.</li> 
 
                 </ol>
             </div>
 
             
+                <div class="note">
+                <p><strong>Совет:</strong> Если нет бульона, то его можно заменить на бульонный кубик, но вместо томатной пасты потребуется 500 г протертых помидоров. </p>
+                </div>
 
         </div>
     </main>
