--- a/index.html
+++ b/index.html
@@ -389,7 +389,36 @@
                 </a>
                 <!-- Рецепт Капекейки с клубничной начинкой и крем-чизом конец -->
 
-                
+                <!-- Рецепт Наполеон с малиновым джемом в стаканчике -->
+                <a href="recipes/dessert_napoleon_individual.html" class="recipe-card"> 
+                    <div class="recipe-image">
+                        <img src="site-photos/dessert_napoleon_individual.jpg" alt="Наполеон с малиновым джемом в стаканчике"> 
+                        <div class="recipe-overlay">
+                            <i class="fas fa-external-link-alt"></i>
+                        </div>
+                    </div>
+                    <div class="recipe-info">
+                        <h3>Наполеон с малиновым джемом в стаканчике</h3> 
+                        <p class="recipe-time"><i class="far fa-clock"></i> 180 мин </p> 
+                    </div>
+                </a>
+                <!-- Рецепт Наполеон с малиновым джемом в стаканчике конец -->
+                 
+                <!-- Рецепт Панна-котта c клубничным джемом -->
+                <a href="recipes/dessert_panna_cotta.html" class="recipe-card"> 
+                    <div class="recipe-image">
+                        <img src="site-photos/dessert_panna_cotta.jpg" alt="Панна-котта c клубничным джемом"> 
+                        <div class="recipe-overlay">
+                            <i class="fas fa-external-link-alt"></i>
+                        </div>
+                    </div>
+                    <div class="recipe-info">
+                        <h3>Панна-котта c клубничным джемом</h3> 
+                        <p class="recipe-time"><i class="far fa-clock"></i> 240 мин </p> 
+                    </div>
+                </a>
+                <!-- Рецепт Панна-котта c клубничным джемом конец -->
+
                 </div>
             </div>
 
