--- a/recipes/dessert_cupcake_creamchease_straberry_jam.html
+++ b/recipes/dessert_cupcake_creamchease_straberry_jam.html
@@ -141,21 +141,20 @@
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
                     <li>Для капкейков:</li> 
-<li>3 яйца</li> 
-<li>105 г сахара</li> 
-<li>65 г муки</li> 
-<li>8 г ванильного сахара</li> 
-<li> </li> 
-<li>Для начинки:</li> 
-<li>100 г замороженной клубники</li> 
-<li>10 г сахара</li> 
-<li>5 г кукурузного крахмала</li> 
-<li> </li> 
-<li>Для крема:</li> 
-<li>200 г творожного сыра</li> 
-<li>65 г сливочного масла</li> 
-<li>55 г сахарной пудры</li> 
-<li>2 г ванилина</li> 
+                    <li>3 яйца</li> 
+                    <li>105 г сахара</li> 
+                    <li>65 г муки</li> 
+                    <li>8 г ванильного сахара</li>
+                    <li>Щепотка соли</li>   
+                    <li>Для начинки:</li> 
+                    <li>100 г замороженной клубники</li> 
+                    <li>10 г сахара</li> 
+                    <li>5 г кукурузного крахмала</li> 
+                    <li>Для крема:</li> 
+                    <li>200 г творожного сыра</li> 
+                    <li>65 г сливочного масла</li> 
+                    <li>55 г сахарной пудры</li> 
+                    <li>2 г ванилина</li> 
 
 
 
@@ -166,25 +165,25 @@
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
                     <li>Начните с начинки, так как ей потребуется больше всего времени для остывания. Разморозьте клубнику, пробейте в блендере и протрите через сито.</li> 
-<li>Переложите клубничное пюре в сотейник, добавьте сахар и начните нагревать массу на среднем огне.</li> 
-<li>Когда сахар растворится, добавьте крахмал и варите, постоянно помешивая, до загустения.</li> 
-<li>Когда масса загустеет, перелейте соус в широкую тарелку, накройте пленкой в контакт и оставьте остывать при комнатной температуре.</li> 
-<li>Перейдите к приготовлению маффинов для капкейков. Тщательно обезжирьте и высушите миску, в которой будете взбивать белки.</li> 
-<li>Аккуратно отделите белки от желтков (рекомендуется делать это над отдельной чашкой для каждого яйца, чтобы в белки не попала ни капли желтка).</li> 
-<li>Добавьте к белкам щепотку соли и начните взбивать на минимальной скорости до появления белой пены.</li> 
-<li>Увеличьте скорость до максимальной и продолжайте взбивать до тех пор, пока от венчика не начнет оставаться четкий след.</li> 
-<li>Затем постепенно всыпьте половину сахара, продолжая взбивать до устойчивых пиков (при поднятии венчика пик из белка должен сохранять форму и не оседать).</li> 
-<li>В другой миске смешайте оставшиеся желтки, вторую половину сахара и ванильный сахар. Взбивайте массу до тех пор, пока она не станет пышной.</li> 
-<li>Затем к желтковой массе переложите треть белковой и аккуратно перемешайте силиконовой лопаткой движениями снизу вверх.</li> 
-<li>Затем добавьте дважды просеянную муку и снова перемешайте аккуратными движениями снизу вверх.</li> 
-<li>Добавьте массу к белкам и снова аккуратно перемешайте.</li> 
-<li>Разогрейте духовку до 180 градусов с нагревом сверху и снизу.</li> 
-<li>Распределите тесто по формочкам для маффинов. Лучше внутрь вложить бумажные вкладыши для капкейков - так капкейк не заветрится и будет мягким несколько дней.</li> 
-<li>Поставьте маффины в духовку на средний уровень примерно на 12 минут. Ориентируйтесь по своей духовке: когда маффины начнут покрываться золотистым цветом, проверьте готовность деревянной зубочисткой. Если она осталась сухой - маффины готовы.</li> 
-<li>Выньте маффины и оставьте их остывать при комнатной температуре, накрыв чистым полотенцем.</li> 
-<li>Перейдите к приготовлению крема. Смешайте масло, творожный сыр, сахарную пудру и ванилин в однородную массу.</li> 
-<li>Когда начинка и капкейки остынут, сделайте неглубокий надрез по кругу в центре капкейка, снимите получившуюся шапочку, положите внутрь начинку, а затем снова накройте шапочкой.</li> 
-<li>Затем с помощью кондитерского мешка выложите крем сверху капкейка. Если основание капкейка будет закрывать бумага, а верх - крем, капкейк останется мягким несколько дней.</li> 
+                    <li>Переложите клубничное пюре в сотейник, добавьте сахар и начните нагревать массу на среднем огне.</li> 
+                    <li>Когда сахар растворится, добавьте крахмал и варите, постоянно помешивая, до загустения.</li> 
+                    <li>Когда масса загустеет, перелейте соус в широкую тарелку, накройте пленкой в контакт и оставьте остывать при комнатной температуре.</li> 
+                    <li>Перейдите к приготовлению маффинов для капкейков. Тщательно обезжирьте и высушите миску, в которой будете взбивать белки.</li> 
+                    <li>Аккуратно отделите белки от желтков (рекомендуется делать это над отдельной чашкой для каждого яйца, чтобы в белки не попала ни капли желтка).</li> 
+                    <li>Добавьте к белкам щепотку соли и начните взбивать на минимальной скорости до появления белой пены.</li> 
+                    <li>Увеличьте скорость до максимальной и продолжайте взбивать до тех пор, пока от венчика не начнет оставаться четкий след.</li> 
+                    <li>Затем постепенно всыпьте половину сахара, продолжая взбивать до устойчивых пиков (при поднятии венчика пик из белка должен сохранять форму и не оседать).</li> 
+                    <li>В другой миске смешайте оставшиеся желтки, вторую половину сахара и ванильный сахар. Взбивайте массу до тех пор, пока она не станет пышной.</li> 
+                    <li>Затем к желтковой массе переложите треть белковой и аккуратно перемешайте силиконовой лопаткой движениями снизу вверх.</li> 
+                    <li>Затем добавьте дважды просеянную муку и снова перемешайте аккуратными движениями снизу вверх.</li> 
+                    <li>Добавьте массу к белкам и снова аккуратно перемешайте.</li> 
+                    <li>Разогрейте духовку до 180°C с нагревом сверху и снизу.</li> 
+                    <li>Распределите тесто по формочкам для маффинов. Лучше внутрь вложить бумажные вкладыши для капкейков - так капкейк не заветрится и будет мягким несколько дней.</li> 
+                    <li>Поставьте маффины в духовку на средний уровень примерно на 12 минут. Ориентируйтесь по своей духовке: когда маффины начнут покрываться золотистым цветом, проверьте готовность деревянной зубочисткой. Если она осталась сухой - маффины готовы.</li> 
+                    <li>Выньте маффины и оставьте их остывать при комнатной температуре, накрыв чистым полотенцем.</li> 
+                    <li>Перейдите к приготовлению крема. Смешайте масло, творожный сыр, сахарную пудру и ванилин в однородную массу.</li> 
+                    <li>Когда начинка и капкейки остынут, сделайте неглубокий надрез по кругу в центре капкейка, снимите получившуюся шапочку, положите внутрь начинку, а затем снова накройте шапочкой.</li> 
+                    <li>Затем с помощью кондитерского мешка выложите крем сверху капкейка. Если основание капкейка будет закрывать бумага, а верх - крем, капкейк останется мягким несколько дней.</li> 
 
                 </ol>
             </div>
