--- a/recipes/breakfast_bliny.html
+++ b/recipes/breakfast_bliny.html
@@ -146,6 +146,7 @@
                     <li>300 мл молока</li> 
                     <li>125 г муки</li> 
                     <li>90 мл кипятка</li> 
+                    <li>2 ст.л. растительного масла</li> 
                     <li>Щепотка соли</li> 
                     <li>Подсолнечное масло, чтобы периодически смазывать сковородку</li> 
                     <li>Сливочное масло, чтобы смазавать готовый блин</li> 
@@ -161,7 +162,7 @@
                     <li>Взбейте яйца с сахаром и солью, добавьте половину молока.</li> 
                     <li>Постепенно всыпьте муку, тщательно перемешивая.</li> 
                     <li>Влейте оставшееся молоко.</li> 
-                    <li>Затем тонкой струйкой влейте крутой кипяток и оставьте тесто на 20-30 минут.</li> 
+                    <li>Затем тонкой струйкой влейте крутой кипяток, добавьте масло, перемешайте и оставьте тесто на 20-30 минут.</li> 
                     <li>Выпекайте блины на среднем огне, смазав сковороду растительным маслом.</li> 
                     <li>Переворачивайте блины силиконовой лопаткой.</li> 
                     <li>Готовые блины смазывайте сливочным маслом и складывайте стопкой, накрыв полотенцем.</li> 
