--- a/recipes/dessert_panna_cotta.html
+++ b/recipes/dessert_panna_cotta.html
@@ -142,14 +142,15 @@
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
                     <li>Для панна-котты:</li> 
-<li>300 г 20% сливок</li> 
-<li>100 г молока</li> 
-<li>50 г сахара</li> 
-<li>50 г воды</li> 
-<li>10 г желатина</li> 
-<li>Для джема:250 г замороженной клубники</li> 
-<li>30 г сахарной пудры</li> 
-<li>5 г крахмала</li> 
+                    <li>300 г 20% сливок</li> 
+                    <li>100 г молока</li> 
+                    <li>50 г сахара</li> 
+                    <li>50 г воды</li> 
+                    <li>10 г желатина</li> 
+                    <li>Для джема:</li> 
+                    <li>250 г замороженной клубники</li> 
+                    <li>30 г сахарной пудры</li> 
+                    <li>5 г крахмала</li> 
 
 
 
@@ -160,14 +161,14 @@
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
                     <li>Замочите желатин в холодной воде.Замочите желатин в холодной воде.</li> 
-<li>В кастрюле смешайте сливки, молоко, сахар и ванильный сахар и доведите до 70°С. Снимите кастрюлю с плиты.</li> 
-<li>Добавьте размягченный желатин в горячую смесь и перемешайте до полного растворения.</li> 
-<li>Разлейте кремовую смесь по порционным формочкам. Удобно сначала взвесить смесь и разделить ее на количество порций, исходя из размера используемой посуды.</li> 
-<li>Дайте ей немного остыть при комнатной температуре, затем поставьте в холодильник на 2 часа.</li> 
-<li>Добавьте размягченное сливочное масло в горячий заварной крем и перемешивайте, пока оно полностью не растает.</li> 
-<li>Затем измельчите клубнику, процедите ее через сито в кастрюлю и добавьте сахарную пудру.</li> 
-<li>Взвесьте клубничную массу, разделите ее на равные порции и вылейте поверх слоя крема.</li> 
-<li>Поставьте в холодильник еще на 2 часа до полного застывания. </li> 
+                    <li>В кастрюле смешайте сливки, молоко, сахар и ванильный сахар и доведите до 70°С. Снимите кастрюлю с плиты.</li> 
+                    <li>Добавьте размягченный желатин в горячую смесь и перемешайте до полного растворения.</li> 
+                    <li>Разлейте кремовую смесь по порционным формочкам. Удобно сначала взвесить смесь и разделить ее на количество порций, исходя из размера используемой посуды.</li> 
+                    <li>Дайте ей немного остыть при комнатной температуре, затем поставьте в холодильник на 2 часа.</li> 
+                    <li>Добавьте размягченное сливочное масло в горячий заварной крем и перемешивайте, пока оно полностью не растает.</li> 
+                    <li>Затем измельчите клубнику, процедите ее через сито в кастрюлю и добавьте сахарную пудру.</li> 
+                    <li>Взвесьте клубничную массу, разделите ее на равные порции и вылейте поверх слоя крема.</li> 
+                    <li>Поставьте в холодильник еще на 2 часа до полного застывания. </li> 
 
                 </ol>
             </div>
