--- a/index.html
+++ b/index.html
@@ -258,8 +258,23 @@
             <div class="tab-content active" id="soups"> 
                 <h2 class="category-title">Супы</h2> 
                 <div class="recipes-grid">
-                <!-- Рецепт 1 -->  
-                <!-- Рецепт 1 конец -->  
+
+                <!-- Рецепт Бульон куриный -->
+                <a href="recipes/soup_chicken_broth.html" class="recipe-card"> 
+                    <div class="recipe-image">
+                        <img src="site-photos/soup_chicken_broth.jpg" alt="Бульон куриный"> 
+                        <div class="recipe-overlay">
+                            <i class="fas fa-external-link-alt"></i>
+                        </div>
+                    </div>
+                    <div class="recipe-info">
+                        <h3>Бульон куриный</h3> 
+                        <p class="recipe-time"><i class="far fa-clock"></i> 90 мин </p> 
+                    </div>
+                </a>
+                <!-- Рецепт Бульон куриный конец --> 
+
+                
                 </div>
             </div>
 
@@ -374,6 +389,21 @@
                 </a>
                 <!-- Рецепт Безе конец -->
 
+                <!-- Рецепт Блинный торт -->
+                <a href="recipes/dessert_pancake_cake.html" class="recipe-card"> 
+                    <div class="recipe-image">
+                        <img src="site-photos/dessert_pancake_cake.jpg" alt="Блинный торт"> 
+                        <div class="recipe-overlay">
+                            <i class="fas fa-external-link-alt"></i>
+                        </div>
+                    </div>
+                    <div class="recipe-info">
+                        <h3>Блинный торт</h3> 
+                        <p class="recipe-time"><i class="far fa-clock"></i> 240 мин </p> 
+                    </div>
+                </a>
+                <!-- Рецепт Блинный торт конец -->
+
                 <!-- Рецепт Капекейки с клубничной начинкой и крем-чизом -->
                 <a href="recipes/dessert_cupcake_creamchease_straberry_jam.html" class="recipe-card"> 
                     <div class="recipe-image">
@@ -403,7 +433,7 @@
                     </div>
                 </a>
                 <!-- Рецепт Наполеон с малиновым джемом в стаканчике конец -->
-                 
+
                 <!-- Рецепт Панна-котта c клубничным джемом -->
                 <a href="recipes/dessert_panna_cotta.html" class="recipe-card"> 
                     <div class="recipe-image">
